add git-logo image

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="ja">
-    <head>
-        <meta charset="utf-8">
-        <title>Gitチュートリアル</title>
-    </head>
-    <body>
-        <h1>はじめてのバージョン管理</h1>
-        <p>Gitを使ってバージョン管理する。</p>
-    </body>
-</html>
+first commit
+# Please enter the commit message for your changes. Lines starting
+# with '#' will be ignored, and an empty message aborts the commit.
+#
+# On branch master
+#
+# Initial commit
+#
+# Changes to be committed:
+#	new file:   index.html
+#
